--- a/assets/css/_setup.scss
+++ b/assets/css/_setup.scss
@@ -10,8 +10,8 @@ $grey-color:         #999;
 $grey-dark-color:    #222;
 $brand-color:        blue; // TODO
 $brand-dark-color:   darken($brand-color, 10%);
-$background-color:   $white;
-$text-color:         $grey-dark-color;
+$background-color:   $grey-dark-color;
+$text-color:         $white;
 $success-color:      green; // TODO
 $warn-color:         red; // TODO
 
