--- a/assets/css/base/_modifiers.scss
+++ b/assets/css/base/_modifiers.scss
@@ -2,10 +2,9 @@
 
 // Modifiers > Borders
 
-// TODO: use if needed
-// .with-border {
-//   border: 1px solid $grey-light;
-// }
+.with-border-bottom {
+  border: 1px solid $grey-light-color;
+}
 .is-rounded {
   border-radius: $default-border-radius;
 }
@@ -20,7 +19,6 @@
 
 // Modifiers > Fills
 
-// TODO: use if needed
 .fill-grey-light {
   background: $grey-light-color;
 }
@@ -34,6 +32,3 @@
   background: $white;
   color: $grey-dark-color;
 }
-// .fill-brand {
-//   background: $brand-color;
-// }
