--- a/assets/css/base/_typography.scss
+++ b/assets/css/base/_typography.scss
@@ -8,7 +8,9 @@ body, select, input, textarea {
 
 // Typography > Headings
 h1, h2, h3, h4, h5, h6 {
+  font-family: $heading-stack;
   font-weight: $bold-font-weight;
+  text-transform: uppercase;
 }
 h1 {
   font-size: $m-font-size-1;
@@ -25,6 +27,10 @@ h2 {
   @include respond-to(lrg) {
     font-size: $font-size-2;
   }
+}
+span.highlight {
+  box-shadow: $gutter 0 0 $warn-color, -$gutter 0 0 $warn-color;
+  background: $warn-color;
 }
 
 // Typography > Text
