--- a/assets/css/base/_base.scss
+++ b/assets/css/base/_base.scss
@@ -6,6 +6,8 @@ body {
   color: $text-color;
 }
 body {
+  background: url("~assets/images/bkg.jpg") top center no-repeat;
+  background-size: contain;
   font-size: $base-font-size;
 }
 body.full-width .site-content {
