--- a/assets/css/base/_grid.scss
+++ b/assets/css/base/_grid.scss
@@ -187,6 +187,11 @@ body.full-width .wrapper {
     flex-direction: row;
   }
 }
+.lrg-flex-row > * {
+  @include respond-to(lrg) {
+    margin-right: $gutter*2;
+  }
+}
 @for $i from 1 through 4 {
   .sml-flex-#{$i} {
     flex: $i;
