--- a/assets/css/_setup.scss
+++ b/assets/css/_setup.scss
@@ -15,6 +15,7 @@ $background-color:   $grey-dark-color;
 $text-color:         $white;
 $success-color:      green; // TODO
 $warn-color:         #ED1720;
+$warn-light-color:   #FFEDED;
 
 $facebook-color:          #405993;
 $facebook-dark-color:     darken($facebook-color, 10%);
@@ -30,7 +31,7 @@ $base-font-weight: normal;
 $bold-font-weight: bold;
 $base-line-height: 1.6;
 
-$font-size-1: 48px;
+$font-size-1: 58px;
 $font-size-2: 28px;
 // $font-size-3: 18px;
 // $font-size-4: $base-font-size;
