--- a/assets/css/base/_modifiers.scss
+++ b/assets/css/base/_modifiers.scss
@@ -3,7 +3,7 @@
 // Modifiers > Borders
 
 .with-border-bottom {
-  border: 1px solid $grey-light-color;
+  border-bottom: 1px solid $grey-light-color;
 }
 .is-rounded {
   border-radius: $default-border-radius;
@@ -31,4 +31,21 @@
 .fill-white {
   background: $white;
   color: $grey-dark-color;
+}
+.fill-warn {
+  position: relative;
+  background: $warn-light-color;
+  color: $warn-color;
+}
+.fill-warn:after {
+  display: block;
+  content: '';
+  height: 0;
+  width: 0;
+  position: absolute;
+  left: 50%;
+  top: 45px; // Magic number
+  margin-left: -8px;
+  border: 8px solid transparent;
+  border-top-color: $warn-light-color;
 }
