--- a/assets/css/base/_typography.scss
+++ b/assets/css/base/_typography.scss
@@ -72,7 +72,7 @@ small {
   color: $white;
 }
 .text-meta {
-  color: $grey-color;
+  color: $grey-light-color;
 }
 .text-brand {
   color: $brand-color;
