--- a/assets/css/base/_images.scss
+++ b/assets/css/base/_images.scss
@@ -4,6 +4,10 @@ img {
   display: block;
   max-width: 100%;
 }
+img.img-inline {
+  display: inline-block;
+  vertical-align: bottom;
+}
 
 .icon-left {
   float: left;
